k8s/workload-identity/network-app_arm.yaml
apiVersion: v1
kind: Service
metadata:
  name: network-app-svc
  namespace: network-app
  labels:
    app: network-app-svc
spec:
  type: ClusterIP
  ports:
    - name: 80-8080
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: network-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels: {}
  name: network-app-ingress
  namespace: network-app
spec:
  ingressClassName: nginx
  rules:
  - host: test.local
    http:
      paths:
      - backend:
          service:
            name: network-app-svc
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-app-deployment
  namespace: network-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-app
  template:
    metadata:
      labels:
        app: network-app
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: workload-identity-sa
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: jannemattila/webapp-network-tester:arm64
          imagePullPolicy: IfNotPresent
          name: network-app
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 150m
              memory: 150Mi
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 1.1.1.1
